--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ハンターハンター 王位継承戦 登場人物データベース</title>
+    <title>ハンターハンター 王位継承戦データベース</title>
     <link rel="stylesheet" href="/style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59778844-9"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-59778844-9');
+    </script>
+
 </head>
 <body>
     <div class="main-header">
@@ -17,27 +26,19 @@
     </div>
     <div class="main-content">
         <div class="main-tab-container">
-            <a class="main-tab">人気ページ</a>
-            <a class="main-tab main-tab-active">王子一覧</a>
-            <a class="main-tab">全登場人物</a>
-            <a class="main-tab">クラピカ念講習参加者</a>
-            <a class="main-tab">伏線一覧</a>
-            <a class="main-tab">ルールまとめ</a>
+            <a class="main-tab" href="/all-prince" attr-page-name="all-prince">王子一覧</a>
+            <a class="main-tab" href="/all-normal-person" attr-page-name="all-normal-person">警護人一覧</a>
         </div>
         <div class="tab-content">
-            <h1 class="content-h1">
-                王子一覧
-            </h1>
+            <h1 class="content-h1"></h1>
             <div class="content-meta-data">
                 <div class="updated-container">
                     <span class="icon-common icon-update"></span>
-                    <div class="updated-value">
-                        2017年12月22日
-                    </div>
+                    <div class="updated-value"></div>
                 </div>
                 <div class="page-views-container">
                     <span class="icon-common icon-eye"></span>
-                    47
+                    <div class="page-views-value"></div>
                 </div>
             </div>
             <div id="content-area"></div>
