--- a/src/static/index.html
+++ b/src/static/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ハンターハンター 王位継承戦データベース</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <link rel="stylesheet" href="/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59778844-9"></script>
     <script>
@@ -19,6 +21,7 @@
 </head>
 
 <body>
+    <div class="svg-container" style="display:none"></div>
     <div class="main-header">
         <div class="header-inline-container">
             <a href="/">
