--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,25 +16,7 @@
         gtag('js', new Date());
         gtag('config', 'UA-59778844-9');
     </script>
-    <script>
-        (function() {
-            var ua = window.navigator.userAgent;
-            if (ua.indexOf("Trident") > 0 || ua.indexOf("MSIE") > 0) {
-                var scriptElement = document.createElement("script");
-                scriptElement.src = "https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js";
-                document.head.appendChild(scriptElement);
-                scriptElement.addEventListener("load", function () {
-                    var scriptElement = document.createElement("script");
-                    scriptElement.src = "/app.js";
-                    document.head.appendChild(scriptElement);
-                })
-            } else {
-                var scriptElement = document.createElement("script");
-                scriptElement.src = "/app.js";
-                document.head.appendChild(scriptElement);
-            }
-        })()
-    </script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 </head>
 
 <body>
@@ -77,6 +59,6 @@
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
-
 </html>
