--- a/src/static/index.html
+++ b/src/static/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ハンターハンター 王位継承戦データベース</title>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ハンターハンター 王位継承戦データベース">
+    <meta property="og:title" content="ハンターハンター 王位継承戦データベース">
+    <meta name="twitter:image" content="https://hunter-hunter-battle-royale.firebaseapp.com/image/twitter_summary_large_image.png">
+    <meta property="og:image" content="https://hunter-hunter-battle-royale.firebaseapp.com/favicon_144x144.png">
+    <meta name="twitter:domain" content="hunter-hunter-battle-royale.firebaseapp.com">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <link rel="stylesheet" href="/style.css">
