--- a/src/static/index.html
+++ b/src/static/index.html
@@ -37,7 +37,7 @@
     <div class="main-content">
         <div class="main-tab-container">
             <a class="main-tab" href="/all-prince" attr-page-name="all-prince">王子一覧</a>
-            <a class="main-tab" href="/all-normal-person" attr-page-name="all-normal-person">警護人一覧</a>
+            <a class="main-tab" href="/" attr-page-name="all-normal-person">警護人一覧</a>
             <a class="main-tab" href="/time-table" attr-page-name="time-table">タイムテーブル（仮）</a>
         </div>
         <div class="tab-content">
